# teachers_aide

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  tailwind.config.js
public/: main.css
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
